style: fix background color overscroll on mobile

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,22 +4,11 @@ html {
     margin: auto;
     @include font-ibm-plex-mono;
     color: color(common, 'black');
+    background-image: url('../assets/svg/Grid.svg');
+    background-position: top left;
+    background-color: color(pastel, 'purple');
+    background-size: rem(50);
     @include mobileLg {
         padding: rem(24) rem(20);
-    }
-
-    &:before {
-        display: block;
-        content: '';
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        background-image: url('../assets/svg/Grid.svg');
-        background-position: top left;
-        background-color: color(pastel, 'purple');
-        background-size: rem(50);
     }
 }
